examples/httproute/traefik/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: argo-rollouts-traefik-lb
spec:
  type: LoadBalancer
  selector:
    app: argo-rollouts-traefik-lb # selector of Gateway provider(step 1)
  ports:
    - protocol: TCP
      port: 8080
      targetPort: web # map with Gateway entrypoint
      name: web
